--- a/theme/templates/main.css
+++ b/theme/templates/main.css
@@ -298,3 +298,17 @@ article .meta a.comments_btn:hover {
   padding-right: 0px;
   padding-left: 0px;
 }
+
+a.headerlink:link {
+  text-decoration: none;
+  padding: 0px 20px;
+  visibility: hidden;
+}
+h1:hover .headerlink,
+h2:hover .headerlink,
+h3:hover .headerlink,
+h4:hover .headerlink,
+h5:hover .headerlink,
+h6:hover .headerlink {
+  visibility: visible;
+}
